fix: modals visible on all screens

--- a/client/src/stylesheets/game/modals/TradeRequestModal.scss
+++ b/client/src/stylesheets/game/modals/TradeRequestModal.scss
@@ -2,6 +2,7 @@
   width: 80rem;
   height: 45rem;
   max-width: none;
+  max-height: 80vh;
   padding: 0.5rem;
   border: 0.125rem solid $space-lightgreen;
   margin: 0;
@@ -38,11 +39,13 @@
         flex-grow: 1;
         width: 100%;
         overflow-y: hidden;
+        height:100%;
         padding: 0.5rem;
         // border: 0.125rem solid $space-lightgreen-025;
 
         .wrapper {
           width: 100%;
+          height: 100%;
           overflow-y: scroll;
         }
       }
